# lumos-sat

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  TODO.md  dev_requirements.txt  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  requirements.txt
docs/source/: advanced_topics.rst  api.rst  conf.py  dev.rst  dev_install.rst  index.rst  observer_frame.rst  satellite_frame.rst  satellite_model.rst  tutorial.rst  usage.rst  user_install.rst
docs/source/_autosummary/: lumos.brdf.fit_tools.fit_model.rst  lumos.brdf.fit_tools.rst  lumos.brdf.library.ABG.rst  lumos.brdf.library.BINOMIAL.rst  lumos.brdf.library.BinomialHelper.rst  lumos.brdf.library.GAUSSIAN.rst  lumos.brdf.library.LAMBERTIAN.rst  lumos.brdf.library.PHONG.rst  lumos.brdf.library.rst  lumos.brdf.rst  lumos.brdf.tools.fit.rst  lumos.brdf.tools.pack_binomial_parameters.rst  lumos.brdf.tools.read_brdf.rst  lumos.brdf.tools.rst  lumos.calculator.get_brightness_coords.rst  lumos.calculator.get_earthshine_panels.rst  (+68 more)
examples/: aluminum_observer_frame.py  aluminum_satellite_frame.py  brdf_plot.py  brightness_frame.py  fit_aluminum_brdf.py  ground_frame.py  satellite.py  satellite_frame.py  simple_sat.py
lumos/: calculator.py  constants.py  conversions.py  functions.py  geometry.py  plot.py  video_tools.py
lumos/brdf/: fit_tools.py  library.py  tools.py
lumos/calculators/: brightness_frame.py  ground_frame.py
lumos/constellation/: library.py  tools.py
lumos/plot/: brdf.py  brightness_frame.mplstyle  brightness_frame.py  ground_frame.mplstyle  ground_frame.py
(+2 files in other folders)
