[project]
name = "lumos-sat"
version = "1.0.1"
description = "Satellite Brightness Calculation Tools"
authors = [
    {name = "Forrest Fankhauser", email = "fafankhauser@ucdavis.edu"},
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "contourpy~=1.0.7",
    "cycler~=0.11.0",
    "fonttools~=4.39.3",
    "kiwisolver~=1.4.4",
    "matplotlib~=3.7.1",
    "numpy~=1.24.2",
    "opencv-python~=4.7.0.72",
    "packaging~=23.0",
    "Pillow~=9.5.0",
    "pyparsing~=3.0.9",
    "python-dateutil~=2.8.2",
    "scipy~=1.10.1",
    "six~=1.16.0"
]